--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "no-skeleton.docpad",
-  "version": "0.1.0",
-  "description": "New DocPad project without using a skeleton",
+  "name": "minasdevorg",
+  "description": "minasdev.org",
+  "version": "0.0.0",
   "engines": {
-    "node": "0.10",
-    "npm": "1.3"
+    "node": ">=0.8.0"
   },
   "dependencies": {
-    "docpad": "~6.59.6"
+    "docpad": "~6.56.0",
+    "docpad-plugin-eco": "~2.0.2"
+  },
+  "devDependencies": {
+    "docpad": "~6.56.0",
+    "docpad-plugin-livereload": "~2.5.3"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
-    "start": "node_modules/docpad/bin/docpad-server"
+    "start": "node ./node_modules/docpad/bin/docpad run"
   }
 }
