--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "docpad": "~6.56.0",
-    "docpad-plugin-eco": "~2.0.2"
+    "docpad-plugin-eco": "~2.0.2",
+    "docpad-plugin-partials": "~2.8.1"
   },
   "devDependencies": {
     "docpad": "~6.56.0",
