--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docpad-plugin-eco": "~2.0.2"
   },
   "devDependencies": {
+    "grunt": "=0.4.2",
     "docpad": "~6.56.0",
     "docpad-plugin-livereload": "~2.5.3"
   },
